# ClosedLoopSimplification

./: CMakeLists.txt  ClosedLoopSimplification.cxx  ClosedLoopSimplification.h  Example.cxx  Helpers.cxx  Helpers.h  Legacy.cxx  StartingPointDemoGraph.cxx  Types.h
Article/: ClosedLoopSimplification.out  ClosedLoopSimplification.tex  ClosedLoopSimplification.tex.backup
VTKJournal/: ClosedLoopSimplification.aux  ClosedLoopSimplification.brf  ClosedLoopSimplification.out  ClosedLoopSimplification.tex  ClosedLoopSimplification.tex.backup  ClosedLoopSimplification.toc
VTKJournal/images/: OutlineApproximation.1.vtp  OutlineApproximation.3.vtp  OutlineApproximation.9.vtp  StraightnessGraph.1.vtp  StraightnessGraph.3.vtp  StraightnessGraph.9.vtp
data/: StartingPointDemoGraph.vtp  rectangle.vtp  rectangleManual.vtp  rectangleNoisy.vtp  rectangleNoisyManual.vtp  rectanglePoints.vtp
